--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,13 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.4.0",
+        "php": ">=8.2.0",
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
-        "yiisoft/yii2-symfonymailer": "~2.0.3"
+        "yiisoft/yii2-symfonymailer": "~2.0.3",
+        "sam-it/yii2-mariadb": "^3.1",
+        "bestyii/yii2-gii-rest": "*",
+        "bestyii/yii2-openapi-reader": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
