--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "sam-it/yii2-mariadb": "^3.1",
         "bestyii/yii2-gii-rest": "*",
-        "bestyii/yii2-openapi-reader": "dev-master"
+        "bestyii/yii2-openapi-reader": "dev-master",
+        "fortawesome/font-awesome": "^6.5"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
