--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "symfony/console": "^6.1",
     "gemorroj/archive7z": "^5.7",
     "npm-asset/viewerjs": "^1.11",
+    "npm-asset/plyr": "^3.7",
     "ext-fileinfo": "*"
   },
   "require-dev": {
