--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
     "fortawesome/font-awesome": "^6.5",
     "ext-zip": "*",
     "ext-rar": "*",
+    "ext-json": "*",
+    "ext-gmp": "*",
+    "ext-bcmath": "*",
     "wapmorgan/unified-archive": "^1.2",
     "symfony/console": "^6.1",
     "gemorroj/archive7z": "^5.7",
@@ -36,7 +39,8 @@
     "npm-asset/plyr": "^3.7",
     "ext-fileinfo": "*",
     "npm-asset/ace-builds": "^1.32",
-    "yiisoft/yii2-redis": "^2.0"
+    "yiisoft/yii2-redis": "^2.0",
+    "ramsey/uuid": "^4.7"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
