--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,10 @@
     "ext-fileinfo": "*",
     "npm-asset/ace-builds": "^1.32",
     "yiisoft/yii2-redis": "^2.0",
-    "ramsey/uuid": "^4.7"
+    "ramsey/uuid": "^4.7",
+    "google/recaptcha": "^1.3",
+    "vlucas/phpdotenv": "^5.6",
+    "yiisoft/yii2-httpclient": "^2.0"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
