整理配置文件，新增ipinfo.io凭证配置

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ DB_HOST=localhost:3306 # 数据库地址
 DB_NAME=yii2basic # 数据库名
 DB_USERNAME=root # 数据库用户名
 DB_PASSWORD= # 数据库密码
+
+# 验证码配置
 VERIFY_PROVIDER= # 验证服务提供商[reCAPTCHA,hCaptcha,Turnstile,None]
 RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI # Google Recaptcha Site Key # Test Site Key
 RECAPTCHA_SECRET=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe # Google Recaptcha Secret # Test Key
@@ -14,3 +16,6 @@ HCAPTCHA_SECRET=0x0000000000000000000000000000000000000000 # hCaptcha Secret Key
 TURNSTILE_SITE_KEY=1x00000000000000000000AA # Turnstile Site Key # Test Site Key
 TURNSTILE_SECRET=1x0000000000000000000000000000000AA # Turnstile Secret Key # Test Key
 COOKIE_VALIDATION_KEY= # Cookie Validation Key
+
+# IP地理位置配置
+IPINFO_TOKEN=  # ipinfo.io token
