--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "ramsey/uuid": "^4.7",
     "google/recaptcha": "^1.3",
     "vlucas/phpdotenv": "^5.6",
-    "yiisoft/yii2-httpclient": "^2.0"
+    "yiisoft/yii2-httpclient": "^2.0",
+    "ipinfo/ipinfo": "^3.1"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
