新增参数 允许关闭ipinfo获取ip地理位置服务 方法见.env.example

--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,5 @@ TURNSTILE_SECRET=1x0000000000000000000000000000000AA # Turnstile Secret Key # Te
 COOKIE_VALIDATION_KEY= # Cookie Validation Key
 
 # IP地理位置配置
+ENABLE_IPINFO=  # 是否启用ipinfo.io [boolean]
 IPINFO_TOKEN=  # ipinfo.io token
