--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,10 @@
     "google/recaptcha": "^1.3",
     "vlucas/phpdotenv": "^5.6",
     "yiisoft/yii2-httpclient": "^2.0",
-    "ipinfo/ipinfo": "^3.1"
+    "ipinfo/ipinfo": "^3.1",
+    "spomky-labs/otphp": "^11.2",
+    "ext-gd": "*",
+    "endroid/qr-code": "^5.0"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
