添加与Web Authn相关依赖

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,10 @@
     "spomky-labs/otphp": "^11.2",
     "ext-gd": "*",
     "endroid/qr-code": "^5.0",
-    "bower-asset/bootstrap": "^5.3"
+    "bower-asset/bootstrap": "^5.3",
+    "web-auth/webauthn-lib": "^4.8",
+    "npm-asset/simplewebauthn--browser": "^9.0",
+    "symfony/serializer": "^7.0"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
