--- a/qodana.yaml
+++ b/qodana.yaml
@@ -30,3 +30,10 @@ php:
 
 #Specify Qodana linter for analysis (Applied in CI/CD pipeline)
 linter: jetbrains/qodana-php:latest
+exclude:
+  - name: All
+    paths:
+      - config\__autocomplete.php
+      - config\test.php
+      - mail\layouts
+      - widgets
