--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
     "symfony/serializer": "^7.0",
     "symfony/property-access": "^7.0",
     "phpdocumentor/reflection-docblock": "^5.3",
-    "web-auth/webauthn-lib": "^4.8"
+    "web-auth/webauthn-lib": "^4.8",
+    "kartik-v/yii2-editable": "dev-master"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
