更新配置文件，增加网站标题和注册功能开关的配置

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
 # 这是示例配置文件
 # 请将其重命名为 .env 并根据需要进行修改
+SITE_TITLE= # 网站标题
+REGISTRATION_ENABLED= # 是否启用注册功能[boolean]
 DOMAIN= # 网站域名
 # 数据库配置
 DB_HOST=localhost:3306 # 数据库地址
 DB_NAME=yii2basic # 数据库名
-DB_USERNAME=root # 数据库用户名
+DB_USERNAME= # 数据库用户名
 DB_PASSWORD= # 数据库密码
 
 # 验证码配置
