实例配置文件中加入Google analysis、Microsoft Clarity的相关项

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 SITE_TITLE= # 网站标题
 REGISTRATION_ENABLED= # 是否启用注册功能[boolean]
 DOMAIN= # 网站域名
+
 # 数据库配置
 DB_HOST=localhost:3306 # 数据库地址
 DB_NAME=yii2basic # 数据库名
@@ -22,3 +23,11 @@ COOKIE_VALIDATION_KEY= # Cookie Validation Key
 # IP地理位置配置
 ENABLE_IPINFO=  # 是否启用ipinfo.io [boolean]
 IPINFO_TOKEN=  # ipinfo.io token
+
+# Microsoft Clarity
+CLARITY_ENABLED= # 是否启用Microsoft Clarity[boolean]
+CLARITY_ID= # Microsoft Clarity Project ID
+
+# Google Analytics
+GA_ENABLED= # 是否启用Google Analytics[boolean]
+GA_ID= # Google Analytics Tracking ID
