修改依赖项

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "ext-json": "*",
     "ext-gmp": "*",
     "ext-bcmath": "*",
+    "ext-com_dotnet": "*",
     "wapmorgan/unified-archive": "^1.2",
     "symfony/console": "^6.1",
     "gemorroj/archive7z": "^5.7",
@@ -65,6 +66,9 @@
     "codeception/module-filesystem": "^3.0 || ^2.0 || ^1.1",
     "codeception/verify": "^3.0 || ^2.2",
     "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4"
+  },
+  "provide": {
+    "ext-com_dotnet": "*"
   },
   "config": {
     "allow-plugins": {
