--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,10 @@
     "kartik-v/yii2-editable": "dev-master",
     "chenx221/yii2-bootstrap5": "dev-master",
     "npm-asset/echarts": "^5.5",
-    "npm-asset/echarts-liquidfill": "^3.1"
+    "npm-asset/echarts-liquidfill": "^3.1",
+    "npm-asset/pell": "^1.0",
+    "npm-asset/quill": "^1.3",
+    "npm-asset/ckeditor5": "^41.0"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
