--- a/composer.json
+++ b/composer.json
@@ -53,9 +53,7 @@
     "chenx221/yii2-bootstrap5": "dev-master",
     "npm-asset/echarts": "^5.5",
     "npm-asset/echarts-liquidfill": "^3.1",
-    "npm-asset/pell": "^1.0",
-    "npm-asset/quill": "^1.3",
-    "npm-asset/ckeditor5": "^41.0"
+    "npm-asset/quill": "^1.3"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
