--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
     "chenx221/yii2-bootstrap5": "dev-master",
     "npm-asset/echarts": "^5.5",
     "npm-asset/echarts-liquidfill": "^3.1",
-    "npm-asset/quill": "^1.3"
+    "npm-asset/quill": "^1.3",
+    "npm-asset/tsparticles--slim": "3.3.0"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
