--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
     "npm-asset/echarts": "^5.5",
     "npm-asset/echarts-liquidfill": "^3.1",
     "npm-asset/quill": "^1.3",
-    "npm-asset/tsparticles--slim": "3.3.0"
+    "npm-asset/tsparticles--slim": "3.3.0",
+    "ext-mbstring": "*"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
