改进示例配置文件说明

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,59 @@
 # 这是示例配置文件
 # 请将其重命名为 .env 并根据需要进行修改
-SITE_TITLE= # 网站标题
-REGISTRATION_ENABLED= # 是否启用注册功能[boolean]
-DOMAIN= # 网站域名
+
+# 网站标题[string]
+SITE_TITLE=
+# 是否启用注册功能[boolean]
+REGISTRATION_ENABLED=
+# 网站域名[string]
+DOMAIN=
 
 # 数据库配置
-DB_HOST=localhost:3306 # 数据库地址
-DB_NAME=yii2basic # 数据库名
-DB_USERNAME= # 数据库用户名
-DB_PASSWORD= # 数据库密码
+# 数据库地址[string](Ex: localhost:3306)
+DB_HOST=
+# 数据库名[string](Ex: yii2basic)
+DB_NAME=
+# 数据库用户名[string](Ex: root)
+DB_USERNAME=
+# 数据库密码[string]
+DB_PASSWORD=
 
 # 验证码配置
-VERIFY_PROVIDER= # 验证服务提供商[reCAPTCHA,hCaptcha,Turnstile,None]
-RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI # Google Recaptcha Site Key # Test Site Key
-RECAPTCHA_SECRET=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe # Google Recaptcha Secret # Test Key
-HCAPTCHA_SITE_KEY=10000000-ffff-ffff-ffff-000000000001 # hCaptcha Site Key # Test Site Key
-HCAPTCHA_SECRET=0x0000000000000000000000000000000000000000 # hCaptcha Secret Key # Test Key
-TURNSTILE_SITE_KEY=1x00000000000000000000AA # Turnstile Site Key # Test Site Key
-TURNSTILE_SECRET=1x0000000000000000000000000000000AA # Turnstile Secret Key # Test Key
-COOKIE_VALIDATION_KEY= # Cookie Validation Key
+# 验证服务提供商[reCAPTCHA,hCaptcha,Turnstile,None]
+VERIFY_PROVIDER=
+
+# Google Recaptcha Site Key[string](Ex: 6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI)(Test Key)
+RECAPTCHA_SITE_KEY=
+# Google Recaptcha Secret[string](Ex: 6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe)(Test Key)
+RECAPTCHA_SECRET=
+
+# hCaptcha Site Key[string](Ex: 10000000-ffff-ffff-ffff-000000000001)(Test Key)
+HCAPTCHA_SITE_KEY=
+# hCaptcha Secret Key[string](Ex: 0x0000000000000000000000000000000000000000)(Test Key)
+HCAPTCHA_SECRET=
+
+# Turnstile Site Key[string](Ex: 1x00000000000000000000AA)(Test Key)
+TURNSTILE_SITE_KEY=
+# Turnstile Secret Key[string](Ex: 1x0000000000000000000000000000000AA)(Test Key)
+TURNSTILE_SECRET=
+
+# Cookie Validation Key[string](Randomly generated key)
+COOKIE_VALIDATION_KEY=
 
 # IP地理位置配置
-ENABLE_IPINFO=  # 是否启用ipinfo.io [boolean]
-IPINFO_TOKEN=  # ipinfo.io token
+# 是否启用ipinfo.io[boolean]
+ENABLE_IPINFO=
+# ipinfo.io token[string]
+IPINFO_TOKEN=
 
 # Microsoft Clarity
-CLARITY_ENABLED= # 是否启用Microsoft Clarity[boolean]
-CLARITY_ID= # Microsoft Clarity Project ID
+# 是否启用Microsoft Clarity[boolean]
+CLARITY_ENABLED=
+# Microsoft Clarity Project ID[string]
+CLARITY_ID=
 
 # Google Analytics
-GA_ENABLED= # 是否启用Google Analytics[boolean]
-GA_ID= # Google Analytics Tracking ID
+# 是否启用Google Analytics[boolean]
+GA_ENABLED=
+# Google Analytics Tracking ID[string]
+GA_ID=
