支持通过配置文件配置redis服务器

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,12 @@ DB_USERNAME=
 # 数据库密码[string]
 DB_PASSWORD=
 
+# Redis
+# Redis地址[string]
+RD_HOST=
+# Redis端口[int]
+RD_PORT=
+
 # 验证码配置
 # 验证服务提供商[reCAPTCHA,hCaptcha,Turnstile,None]
 VERIFY_PROVIDER=
